Migrate to 2024.06.x (#9)
* Migrate to 2024.06.x

This commit updates the project to use JDK 21 and Maven Dependency Plugin version 3.8.1.

The following changes were made:

- Updated the GitHub Actions workflows to use JDK 21.
- Updated the Maven Dependency Plugin version to 3.8.1 in pom.xml.
- Added branch filters for 2023.06.x and 2024.06.x to maven-publish-snapshot.yml
- Changed the version in pom.xml to 2024.06-SNAPSHOT
- Changed the maven verify command to maven clean install in maven-pr.yml